# Custom-python-binding-for-OpenCV

./: CMakeLists.txt  LICENSE  README.md  gen2.py  hdr_parser.py
src/: cv2.cpp  headers.txt  sandbox.cpp  sandbox.hpp
